--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/ezbid
-spring.datasource.username=root #Replace with DB userName
-spring.datasource.password=MyDB3001 #DB PASSWORD
+spring.datasource.url=jdbc:mysql://localhost:3306/EZBid
+spring.datasource.username=root
+spring.datasource.password=EZBid1234
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
