--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,10 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 jwt.secret=MyKey3001@!@!
 jwt.expirationMs=3600000 # 1 hour (token exp time)
 
-# Server Configuration (optional)
-# server.port=8080
+# Server Configuration
+
+server.port=8080
+
+# File Upload Configuration
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
