--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,16 +6,18 @@ spring.datasource.password=EZBid1234
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 
 # JWT Configuration
-jwt.secret=MyKey3001@!@!
+jwt.secret=MySecretKey
 jwt.expirationMs=3600000 # 1 hour (token exp time)
 
-# Server Configuration
+# Email Configuration
+support_email=ezbidapp@gmail.com
+support_email_password=szgt stmf jsmp rlyq
 
+# Server Configuration
 server.port=8080
 
 # File Upload Configuration
