--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,11 +11,11 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 # JWT Configuration
 jwt.secret=MySecretKey
-jwt.expirationMs=3600000 # 1 hour (token exp time)
+jwt.expirationMs=3600000
 
 # Email Configuration
-support_email=ezbidapp@gmail.com
-support_email_password=szgt stmf jsmp rlyq
+mail.address=ezbidapp@gmail.com
+mail.password=szgt stmf jsmp rlyq
 
 # Server Configuration
 server.port=8080
