before tring to fix some bugs. After fixing the authenticator issues, but bedore I could get response from the server (like what auctions there are)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 
-# JWT Configuration
-jwt.secret=MySecretKey
+# JWT Configuration (1 hour expiration)
+jwt.secret=wb4Gihh0NzM2RYa+e4QNk3mSfrt9oM/GFV5ImwZFbEo!
 jwt.expirationMs=3600000
 
 # Email Configuration
