--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,9 @@ server.port=8080
 # File Upload Configuration
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
+
+
+# Debugging Configuration
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
