added the option to delete an auction

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,5 +27,5 @@ spring.servlet.multipart.max-request-size=5MB
 
 # Debugging Configuration
 
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.springframework.web=DEBUG
+# logging.level.org.hibernate.SQL=DEBUG
