--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,10 @@ server.port=8080
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 
+# File Storage Configuration
+spring.web.resources.static-locations=classpath:/static/,file:src/main/resources/static/img/
+
+
 
 # Debugging Configuration
 
